fade out typed chars after one second

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <title>Void</title>
     <meta charset="utf=8"/>
 
-    <style>@import url("https://use.typekit.net/llk2fgv.css");</style>
+    <link rel="stylesheet" href="https://use.typekit.net/usy5hcb.css"/>
     <link rel="stylesheet" type="text/css" href="main.css"/>
+
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
+    <script src="void.js"></script>
 </head>
 <body>
     <div id="container">
-        <p class="voidtext">void</p>
+        <p class="void"></p>
     </div>
 </body>
