added blinking cursor

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
     <div id="container">
-        <p id="void"></p>
+        <p id="void"><span id="cursor">|</span></p>
     </div>
 </body>
