minor text fixes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Void</title>
+    <title>Scream Into The Void</title>
     <meta charset="utf=8"/>
 
     <link rel="stylesheet" href="https://use.typekit.net/usy5hcb.css"/>
