--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="https://use.typekit.net/usy5hcb.css"/>
     <link rel="stylesheet" type="text/css" href="main.css"/>
 
+    <link rel="shortcut icon" href="icon/0.5x/voidArtboard 1@0.5x.png" />
+
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
     <script src="void.js"></script>
 </head>
