--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <div id="container">
-        <p id="void"><span id="cursor">|</span></p>
+        <p id="voidInput" contenteditable="true"></p>
+        <p id="voidText"></p>
     </div>
 </body>
