--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 
     <link rel="shortcut icon" href="icon/icon@0.5x.png" />
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118812707-3"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-118812707-3');
+    </script>
+
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
     <script src="void.js"></script>
 </head>
