--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
-    <title>Scream Into The Void</title>
+    <title>Scream tnto the Void</title>
     <meta charset="utf=8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://use.typekit.net/usy5hcb.css"/>
     <link rel="stylesheet" type="text/css" href="main.css"/>
@@ -25,5 +26,6 @@
     <div id="container">
         <p id="voidInput" contenteditable="true"></p>
         <p id="voidText"></p>
+        <nav id="footer"><a href="http://zac.boston">© theonlyzac</a> | about | options</nav> 
     </div>
 </body>
