tweaked responsive design

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Scream tnto the Void</title>
     <meta charset="utf=8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width", initial-scale="1">
 
     <link rel="stylesheet" href="https://use.typekit.net/usy5hcb.css"/>
     <link rel="stylesheet" type="text/css" href="main.css"/>
@@ -24,8 +24,8 @@
 </head>
 <body>
     <div id="container">
-        <p id="voidInput" contenteditable="true"></p>
-        <p id="voidText"></p>
+        <p class="void" id="voidInput" contenteditable="true"></p>
+        <p class="void" id="voidText"></p>
         <nav id="footer"><a href="http://zac.boston">© theonlyzac</a> | about | options</nav> 
     </div>
 </body>
