fixed responsive design issues

--- a/index.html
+++ b/index.html
@@ -55,15 +55,17 @@
         <div class="popup options-popup" style="display:none">
             <span class="btn close-btn">x</span>
             <h1>Options</h1>
-            <label for="invert-opt">Invert Colors</label> <input type="checkbox" id="invert-opt">
+            <h2>Coming soon.</h2>
+            <!--<label for="invert-opt">Invert Colors</label> <input type="checkbox" id="invert-opt">
             </br>
             <label for="autofade-opt">Auto Fade</label> <input type="checkbox" id="autofade-opt">
             </br>
-            <label for="timer-opt">Auto Fade Timer</label> <input type="number" id="timer-opt">
+            <label for="timer-opt">Auto Fade Timer</label> <input type="number" id="timer-opt">-->
         </div>
 
         <nav id="footer">© <a href="http://zac.boston">theonlyzac</a> |
             <span class="btn about-btn">about</span> |
-            <span class="btn options-btn">options</span></nav> 
+            <span class="btn options-btn">options</span>
+        </nav> 
     </div>
 </body>
