minor text fixes

--- a/index.html
+++ b/index.html
@@ -33,13 +33,11 @@
             <h1>Scream into the Void</h1>
             <h2>by Zac Krasnow</h2>
             <p>
-                Sometimes you just need to get something out of your system. 
-                This app is designed to simulate the experience of screaming 
-                into a pillow.
+                Sometimes you just need to clear your head. This app is designed to
+                simulate the experience of shouting into a pillow.
             </p>
             <p>
-                Type anything and watch it disappear into the void. Write your 
-                hopes, fears, dreams, thoughts, or just mash random keys. 
+                Type in anything you want and watch it disappear into the void. 
                 Nothing you write is ever saved or seen by anyone else. 
             </p>
             <p>
