--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="utf=8"/>
     <meta name="viewport" content="width=device-width", initial-scale="1">
 
+    <!-- icons -->
+    <link rel="icon" sizes="128x128" href="icon/icon@1x.png">
+    <link rel="apple-touch-icon" sizes="128x128" href="icon/icon@1x.png">
+
+    <!-- styles -->
     <link rel="stylesheet" href="https://use.typekit.net/usy5hcb.css"/>
     <link rel="stylesheet" type="text/css" href="main.css"/>
-
-    <link rel="shortcut icon" href="icon/icon@0.5x.png" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118812707-3"></script>
@@ -19,6 +22,7 @@
     gtag('config', 'UA-118812707-3');
     </script>
 
+    <!-- js -->
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
     <script src="void.js"></script>
     <script src="transitions.js"></script>
