minor text fixes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Scream tnto the Void</title>
+    <title>Scream into the Void</title>
     <meta charset="utf=8"/>
     <meta name="viewport" content="width=device-width", initial-scale="1">
 
