minor text fixes

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
 
         <nav id="footer">© <a href="http://zac.boston">theonlyzac</a> |
-            <span class="btn about-btn">about</span> |
+            <span class="btn about-btn">help</span> |
             <span class="btn options-btn">options</span>
         </nav> 
     </div>
