Tweaks and fixes

--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <head>
-    <title>Scream into the Void</title>
-    <meta charset="utf=8"/>
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width", initial-scale="1">
+
+    <title>Scream into the Void</title>
+    <meta name="author" content="theonlyzac">
+    
+    <meta name="description" content="A simple stress-relief app that lets you type anything and watch it disappear into the void. Nothing you write is ever saved or seen by anyone else.">
+    <meta name="keywords" content="void, stress, relief, app, web app, webapp, theonlyzac, zac krasnow, zacbox, zacbox.app, zacboxapp">
+    <meta name="theme-color" content="#000000">
+    <meta name="robots" content="index, follow">
 
     <!-- icons -->
     <link rel="icon" sizes="128x128" href="icon/icon@1x.png">
@@ -29,13 +36,13 @@
 </head>
 <body>
     <div id="container">
-        <p class="void" id="voidInput" contenteditable="true"></p>
-        <p class="void" id="voidText"></p>
+        <p id="voidInput" class="void" contenteditable="true" spellcheck="false"></p>
+        <p id="voidText" class="void"></p>
 
         <div class="popup about-popup" style="display:none">
             <span class="btn close-btn">x</span>
             <h1>Scream into the Void</h1>
-            <h2>by Zac Krasnow</h2>
+            <h2>by theonlyzac</h2>
             <p>
                 Sometimes you just need to clear your head. This app is designed to
                 simulate the experience of shouting into a pillow.
@@ -45,11 +52,11 @@
                 Nothing you write is ever saved or seen by anyone else. 
             </p>
             <p>
-                To see more apps I've created, visit
+                For other apps I've created, visit
                 <a href="https://zacbox.app">https://zacbox.app</a>.
             </p>
             <p>
-                To see my web development portfolio or contact me, visit 
+                For my portfolio and/or to contact me, visit 
                 <a href="http://zac.boston">http://zac.boston</a>.
             </p>
         </div>
