Minor text fixes

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
+<html lang="en">
+
 <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width", initial-scale="1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" , initial-scale="1">
 
     <title>Scream into the Void</title>
     <meta name="author" content="theonlyzac">
-    
-    <meta name="description" content="A simple stress-relief app that lets you type anything and watch it disappear into the void. Nothing you write is ever saved or seen by anyone else.">
-    <meta name="keywords" content="void, stress, relief, app, web app, webapp, theonlyzac, zac krasnow, zacbox, zacbox.app, zacboxapp">
+
+    <meta name="description"
+        content="A simple stress-relief app that lets you type anything and watch it disappear into the void. Nothing you write is ever saved or seen by anyone else.">
+    <meta name="keywords"
+        content="void, stress, relief, app, web app, webapp, theonlyzac, zac krasnow, zacbox, zacbox.app, zacboxapp">
     <meta name="theme-color" content="#000000">
     <meta name="robots" content="index, follow">
 
@@ -16,17 +20,17 @@
     <link rel="apple-touch-icon" sizes="128x128" href="icon/icon@1x.png">
 
     <!-- styles -->
-    <link rel="stylesheet" href="https://use.typekit.net/usy5hcb.css"/>
-    <link rel="stylesheet" type="text/css" href="main.css"/>
+    <link rel="stylesheet" href="https://use.typekit.net/usy5hcb.css" />
+    <link rel="stylesheet" type="text/css" href="main.css" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118812707-3"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-    gtag('config', 'UA-118812707-3');
+        gtag('config', 'UA-118812707-3');
     </script>
 
     <!-- js -->
@@ -34,6 +38,7 @@
     <script src="void.js"></script>
     <script src="transitions.js"></script>
 </head>
+
 <body>
     <div id="container">
         <p id="voidInput" class="void" contenteditable="true" spellcheck="false"></p>
@@ -48,15 +53,15 @@
                 simulate the experience of shouting into a pillow.
             </p>
             <p>
-                Type in anything you want and watch it disappear into the void. 
-                Nothing you write is ever saved or seen by anyone else. 
+                Type in anything you want and watch it disappear into the void.
+                Nothing you write is ever saved or seen by anyone else.
             </p>
             <p>
                 For other apps I've created, visit
                 <a href="https://zacbox.app">https://zacbox.app</a>.
             </p>
             <p>
-                For my portfolio and/or to contact me, visit 
+                For my portfolio and/or to contact me, visit
                 <a href="http://zac.boston">http://zac.boston</a>.
             </p>
         </div>
@@ -66,15 +71,17 @@
             <h1>Options</h1>
             <h2>Coming soon.</h2>
             <!--<label for="invert-opt">Invert Colors</label> <input type="checkbox" id="invert-opt">
-            </br>
-            <label for="autofade-opt">Auto Fade</label> <input type="checkbox" id="autofade-opt">
-            </br>
-            <label for="timer-opt">Auto Fade Timer</label> <input type="number" id="timer-opt">-->
+                </br>
+                <label for="autofade-opt">Auto Fade</label> <input type="checkbox" id="autofade-opt">
+                </br>
+                <label for="timer-opt">Auto Fade Timer</label> <input type="number" id="timer-opt">-->
         </div>
 
         <nav id="footer">© <a href="http://zac.boston">theonlyzac</a> |
             <span class="btn about-btn">help</span> |
             <span class="btn options-btn">options</span>
-        </nav> 
+        </nav>
     </div>
 </body>
+
+</html>
